// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders on the bottom on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: 8px;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the bottom on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: 8px;
  -webkit-transform: translate(-50%, 0);
  -moz-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the bottomLeft on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the bottomLeft on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the bottomRight on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: 8px;
  -webkit-transform: translate(-100%);
  -moz-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the bottomRight on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: 8px;
  -webkit-transform: translate(-100%);
  -moz-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the left on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: -8px;
  top: 0;
  -webkit-transform: translate(-100%, -50%);
  -moz-transform: translate(-100%, -50%);
  -ms-transform: translate(-100%, -50%);
  transform: translate(-100%, -50%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the left on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: -8px;
  top: 0;
  -webkit-transform: translate(-100%, -50%);
  -moz-transform: translate(-100%, -50%);
  -ms-transform: translate(-100%, -50%);
  transform: translate(-100%, -50%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the right on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 8px;
  top: 0;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the right on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 8px;
  top: 0;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the top on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(-50%, -100%);
  -moz-transform: translate(-50%, -100%);
  -ms-transform: translate(-50%, -100%);
  transform: translate(-50%, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the top on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(-50%, -100%);
  -moz-transform: translate(-50%, -100%);
  -ms-transform: translate(-50%, -100%);
  transform: translate(-50%, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the topLeft on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(0, -100%);
  -moz-transform: translate(0, -100%);
  -ms-transform: translate(0, -100%);
  transform: translate(0, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the topLeft on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(0, -100%);
  -moz-transform: translate(0, -100%);
  -ms-transform: translate(0, -100%);
  transform: translate(0, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the topRight on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25),0 2px 4px -1px rgba(5,25,45,0.3);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(-100%, -100%);
  -moz-transform: translate(-100%, -100%);
  -ms-transform: translate(-100%, -100%);
  transform: translate(-100%, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #fffbf3;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #05192d;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;

exports[`Tooltip renders on the topRight on the target 2`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
  box-shadow: 0 0 2px 0 rgba(5, 25, 45, 0.25);
  position: fixed;
  left: 0;
  top: -8px;
  -webkit-transform: translate(-100%, -100%);
  -moz-transform: translate(-100%, -100%);
  -ms-transform: translate(-100%, -100%);
  transform: translate(-100%, -100%);
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  z-index: 1;
  background-color: #05192d;
  box-shadow: none;
}

.emotion-2 {
  -webkit-font-smoothing: antialiased;
  color: #05192d;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 400;
  font-size: 12px;
  white-space: nowrap;
  color: #ffffff;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
    <div
      class="emotion-1"
      id="abc"
    >
      <span
        class="emotion-2"
      >
        tooltip text content
      </span>
    </div>
  </div>
</body>
`;
